// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task renders the Task with completed status 1`] = `
<React.Fragment>
  <input
    defaultChecked={true}
    onClick={[Function]}
    type="checkbox"
  />
  Complete Task
   [
  complete
  ]
</React.Fragment>
`;

exports[`Task renders the Task with incomplete status 1`] = `
<React.Fragment>
  <input
    defaultChecked={false}
    onClick={[Function]}
    type="checkbox"
  />
  Incomplete Task
   [
  incomplete
  ]
</React.Fragment>
`;
